<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/blue_background">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:focusableInTouchMode="true"

	    tools:context="it.poliba.giorgiobasile.prescriptionwriter.NewActivity$PlaceholderFragment" >
	
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/label"
	 	>
		    <ImageView
		        android:id="@+id/stetoView"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/steto_icon" />

		    <TextView
		        android:id="@+id/label_doctor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:fontFamily="sans-serif-light"
		        android:text="@string/doctor"
		        android:textSize="30sp"
		        	    android:layout_marginLeft="20dp"
		        android:layout_toRightOf="@id/stetoView"
		        android:layout_centerVertical="true" />

		    

	 	</RelativeLayout>
		<TextView
	        android:id="@+id/label_name"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
				    android:paddingTop="32dp"
	        android:text="@string/name"
	        android:textAllCaps="true"
	        android:layout_below="@id/label"
	        android:textSize="14sp"
	        /> 
	    <TextView
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:textSize="20sp"
	        android:layout_below="@id/label_name" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"
	        android:fontFamily="sans-serif-condensed">
	    </TextView>
	    <TextView
	        android:id="@+id/label_surname"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:text="@string/surname"
	        android:textAllCaps="true"
	        android:layout_below="@id/name"
	        android:textSize="14sp"
	        /> 
		<TextView
	        android:id="@+id/surname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:textSize="20sp"
	        android:fontFamily="sans-serif-condensed"
	        android:layout_below="@id/label_surname" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp">
	    </TextView>
		<TextView
	        android:id="@+id/label_regionalcode"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
	        android:text="@string/regionalcode"
	        android:textAllCaps="true"
	        android:layout_below="@id/surname"
	        android:textSize="14sp"
	        /> 
		<TextView
	        android:id="@+id/regionalcode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:layout_below="@id/label_regionalcode"
	        android:maxLength="16"
	        android:textSize="20sp"
	        android:singleLine="true"
	        android:textAllCaps="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp" 
	        android:fontFamily="sans-serif-condensed"/>
   		<TextView
	        android:id="@+id/label_aslcode"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
	        android:text="@string/aslcode"
	        android:textAllCaps="true"
	        android:layout_below="@id/regionalcode"
	        android:textSize="14sp"
	        /> 
		<TextView
	        android:id="@+id/aslcode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:ems="10"
	        android:layout_below="@id/label_aslcode"
	        android:maxLength="16"
	        android:textSize="20sp"
	        android:singleLine="true"
	        android:textAllCaps="true"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp" 
	        android:fontFamily="sans-serif-condensed"/>
	</RelativeLayout>
</ScrollView>